feat:added mogo

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL = "mongodb+srv://bidisha:bidisha@cluster0.vns42.mongodb.net/kanban"
+MONGO_URL = "mongodb+srv://bidisha:bidisha@cluster0.vns42.mongodb.net/?retryWrites=true&w=majority"
